# ClassifyMyRun

./: .gitignore  README.md  luigi.cfg  pyproject.toml  setup_auth.py
src/: auth.py  config.py  database.py  pipeline.py  strava_api.py  test.py  utils.py
src/api_tools/: auth.py  strava_api.py
src/data/: fetch_strava_data.py
src/tasks/: __init__.py  create_db.py  get_activities.py  get_streams.py
