[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ClassifyMyRun"
version = "0.1.0"
description = "Run classification"
authors = [
    { name="Zak Lawrence", email="zlawrence97@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "torch",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["src"]
